# NFL-Schedule

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs  structs.rs  structs.rs.bck
